fylo data project, mobile version completed

--- a/04-fylo-data-storage/index.html
+++ b/04-fylo-data-storage/index.html
@@ -10,22 +10,46 @@
   <link rel="stylesheet" href="./styles/style.css">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
+    .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 0; left: 0;}
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
-  
-  You’ve used 815 GB of your storage
+  <div class="container">
+    <section class="inputs">
+      <figure class="logo">
+        <img src="./images/logo.svg" alt="Fylo logo">
+      </figure>
+      <div class="input-container">
+        <!-- document -->
+        <label for="doc"><span class="icon icon-doc"></span></label>
+        <input type="file" id="doc">
+        <!-- folder -->
+        <label for="folder"><span class="icon icon-folder"></span></label>
+        <input type="file" id="folder">
+        <!-- cloud -->
+        <label for="cloud"><span class="icon icon-cloud"></span></label>
+        <input type="submit" id="cloud">
+      </div>
+    </section>
+    <section class="info">
+      <p>You’ve used <span class="bold">815 GB</span> of your storage</p>
+      <div class="progress-bar">
+        <span class="bar"></span>
+      </div>
+      <div class="space">
+        <span class="bold">0 GB</span>
+        <span class="bold">1000 GB</span>
+      </div>
+      <div class="card">
+        <p><span class="rest">185</span>GB Left</p>
+      </div>
+    </section>
+  </div>
 
-  185 GB Left
-  
-  0 GB
-  1000 GB
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">joseArc</a>.
   </div>
 </body>
 </html>
