--- a/04-fylo-data-storage/index.html
+++ b/04-fylo-data-storage/index.html
@@ -8,6 +8,7 @@
   
   <title>Frontend Mentor | Fylo data storage component</title>
   <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width: 1440px)">
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; position: absolute; bottom: 0; left: 0;}
