static job listing

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
       <li>
         <a href="./04-fylo-data-storage/index.html">04-fylo-data-storage</a>
       </li>
+      <li>
+        <a href="./05-static-job-listing/index.html">05-static-job-listing</a>
+      </li>
     </ul>
   </section>
 </body>
