--- a/05-static-job-listing/index.html
+++ b/05-static-job-listing/index.html
@@ -3,12 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="./styles/style.css">
-  
+  <link rel="stylesheet" href="./styles/tablet.css" media="screen and (min-width: 768px)">  
+  <link rel="stylesheet" href="./styles/desktop.css" media="screen and (min-width: 1440px)">
   <title>Frontend Mentor | Job Listings</title>
-
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
@@ -29,7 +28,7 @@
   <div class="grid">
     <section class="jobs container">
       <!-- item -->
-      <article class="job-item grid-main-area">
+      <article class="job-item grid-main-area special">
         <figure class="job-image">
           <img src="./images/photosnap.svg" alt="company logo">
         </figure>
@@ -111,13 +110,10 @@
       </article>
     </section>
   </div>
-  <!-- Item Start -->
-  
-
-  
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/joseArc23">joseArc</a>.
   </div>
+  <script src="./app.js"></script>
 </body>
 </html>
