--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
   <section>
     <ul>
       <li>
-        <a href="./01-countown/index.html">01-countown</a>
+        <a href="./01-countown/index.html">01 countdown</a>
       </li>
       <li>
-        <a href="./02-fylo-landing-page/index.html">02-fylo-landing-page</a>
+        <a href="./02-fylo-landing-page/index.html">02 landing-page</a>
       </li>
       <li>
-        <a href="./03-testimonials-grid-section/index.html">03-testimonials-grid-section</a>
+        <a href="./03-testimonials-grid-section/index.html">03 testimonials-grid-section</a>
       </li>
       <li>
-        <a href="./04-fylo-data-storage/index.html">04-fylo-data-storage</a>
+        <a href="./04-fylo-data-storage/index.html">04 data-storage</a>
       </li>
       <li>
-        <a href="./05-static-job-listing/index.html">05-static-job-listing</a>
+        <a href="./05-static-job-listing/index.html">05 static-job-listing</a>
       </li>
     </ul>
   </section>
